2004-04-02	blytkerchan
	* hash.h (hash_foreach): correct prototype

	* hash.h (hash_foreach): new function
	* hash.c (hash_search): call hash_foreach
	(hash_foreach): new function

2004-03-31	blytkerchan
	* Hash.cc (Hash::for_each): new function
	* Hash.h (Hash::foreach_func_t): new type
	(Hash::for_each): new function
	* hash.c (struct hash_search_t): new type
	(hash_search_helper): new function
	(hash_search): ditto
	* hash.h (hash_val_cmp_func_t): new type
	(hash_search): new function

2004-03-29	blytkerchan
	* array.c (array_linear_search): don't compare if the value in the array is NULL (i.e. node is empty)
	(array_condense_helper): sort empty nodes to the end of the array
	* tests/array_test.c (array_test1): add a comment on what we do
	check that the sorting worked
	fix memory leak
	[array_test2_t]: new structure
	(array_test2_compare): new function
	(array_test2): ditto
	(main): call array_test2

2004-03-27	blytkerchan
	* array.c (array_resize): fix memory leak
	(array_sort_worker): ditto
	* tests/array_test.c (array_test1): ditto
	(array_test1_sort_helper): invert sort order

2004-03-25	blytkerchan
	* array.h: new file
	* array.c: ditto
	* tests/array_test.c: ditto
	* Makefile.am [libcontain_la_SOURCES]: add array.c
	[pkginclude_HEADERS]: add array.h
	* tests/Makefile.am [TESTS]: add array_test
	[array_test_LDADD]: new variable

2004-03-22	blytkerchan
	* hash.h [hash_t]: new type
	[libhash_hashtype]: add GLIB_HASH hash type
	[hash_key_cmp_func_t]: new type
	[hash_key_hash_func_t]: ditto
	(new_hash): take two more parameters (hash_func and compare_func)
	return hash_t
	(delete_hash): take a hash_t as parameter
	(hash_get): ditto
	(hash_put): ditto
	(hash_remove): ditto
	(hash_keys): ditto

2004-03-09	blytkerchan
	import a hash implementation from glib to have a C-only implementation
	* Makefile.am: make C++ code optional (CXX defined by configure)
	make glib code optional (GLIB defined by configure)
	set version info on library
	* hash-config.h.in: new file