@@ -75,3 +75,9 @@ extern "C" void ** cxx_hash_keys(Hash * hash)
 {
 	return(hash->keys());
 }
+
+extern "C" void cxx_hash_for_each(Hash * hash, hash_foreach_helper_func_t func, void * data)
+{
+	hash->for_each(func, data);
+}
+
