@@ -1,3 +1,9 @@
+2004-04-05	blytkerchan
+	* Hash.cc (Hash::for_each): dereference value field of mapping (in stead of non-existance val field)
+	* c_interface.cc (cxx_hash_for_each): new function
+	* c_interface.h (cxx_hash_for_each): ditto
+	* hash.c (hash_foreach): call cxx_hash_for_each
+
 2004-04-02	blytkerchan
 	* hash.h (hash_foreach): correct prototype
 
